--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale-1">
+	<meta http-equiv="refresh" content="10" >
 </head>
 <body>
 	<header>
@@ -23,22 +24,28 @@
 		<a href="" class="button button-accent"> See Our Works </a>	
 		</div>
 	</section>
+	
+
+	<div class="container">
 	<section class="home-about">
+		
 		<div class="home-about-textbox">
 			<h1> Who we are</h1>
 			<p> Sit by the fire drink water out of the faucet hide head under blanker so no one can see cat is love, cat is life. Knock dish off table eating always hungry so favor packaging over toy.</p>
 			<p><strong>Rub face on owner.</strong> Peer out window, chatter at birds, lure them to mouth. Chase ball of strin eat a plant, kill a hand, i am the best have secret plans.</p>
 		</div>
+	
 	</section>
+	
 	<section class="portfolio">
-		<h1> Some of out work </h1>
+		<h1> Some of our work </h1>
 
 			<!--  --> 
 		<figure class="port-item">
 			<img src="img/portfolio-01.jpg" alt="portfolio item">
 			<figcaption class="port-desc">
 				<p>Project title</p>
-				<a href="" class="button button-accent button-small"> Project details </a>
+				<a href="" class="button-port"> Project details </a>
 			</figcaption>
 		</figure>
 
@@ -46,7 +53,7 @@
 			<img src="img/portfolio-02.jpg" alt="portfolio item">
 			<figcaption class="port-desc">
 				<p>Project title</p>
-				<a href="" class="button button-accent button-small"> Project details</a>
+				<a href="" class="button-port"> Project details</a>
 			</figcaption>
 		</figure>
 
@@ -54,7 +61,7 @@
 			<img src="img/portfolio-03.jpg" alt="portfolio item">
 			<figcaption class="port-desc">
 				<p>Project title</p>
-				<a href="" class="button button-accent button-small"> Project details </a>
+				<a href="" class="button-port"> Project details </a>
 			</figcaption>
 		</figure>
 
@@ -62,7 +69,7 @@
 			<img src="img/portfolio-04.jpg" alt="portfolio item">
 			<figcaption class="port-desc">
 				<p>Project title</p>
-				<a href="" class="button button-accent button-small"> Project details </a>
+				<a href="" class="button-port"> Project details </a>
 			</figcaption>
 		</figure>
 		
@@ -70,7 +77,7 @@
 			<img src="img/portfolio-05.jpg" alt="portfolio item">
 			<figcaption class="port-desc">
 				<p>Project title</p>
-				<a href="" class="button button-accent button-small"> Project details </a>
+				<a href="" class="button-port"> Project details </a>
 			</figcaption>
 		</figure>
 
@@ -78,13 +85,22 @@
 			<img src="img/portfolio-06.jpg" alt="portfolio item">
 			<figcaption class="port-desc">
 				<p>Project title</p>
-				<a href="" class="button button-accent button-small"> Project details </a>
+				<a href="" class="button-port"> Project details </a>
 			</figcaption>
 		</figure>
 	</section>
 
+	
+
+	<section class="cta">
+		<div class="container">
+		<h1 class="title-cta"> Like what you see? <span> Then what are you waiting for? </span></h1>
+		<a href="" class="button-work"> Hire us </a>	
+		</div>
+	</section>
+
 	<footer>
-		
+	<div class="container">	
 	<div class="col-3">
 		<p> Shoreditch bespoke leggings, tote bag williamsburg woke retro readymade scenester brunch art party farm-to-table pug. Wayfarers lyft prism, edison buld distillery pok pok narwhal pinterest poke. </p>
 	</div>
@@ -121,6 +137,7 @@
 			<li> Scenester </li>
 		</ul>
 	</div>
+ 	</div>
 	</footer>
 
 </body>
