Alterações no header e nav

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale-1">
-	<meta http-equiv="refresh" content="10" >
+	<meta http-equiv="refresh" content="60" >
 </head>
 <body>
 	<header>
@@ -37,10 +37,12 @@
 	
 	</section>
 	
-	<section class="portfolio">
+	<section>
 		<h1> Some of our work </h1>
 
-			<!--  --> 
+		<!--  -->
+		
+		<div class="portfolio">
 		<figure class="port-item">
 			<img src="img/portfolio-01.jpg" alt="portfolio item">
 			<figcaption class="port-desc">
@@ -88,6 +90,7 @@
 				<a href="" class="button-port"> Project details </a>
 			</figcaption>
 		</figure>
+		</div>
 	</section>
 
 	
